--- a/docs/final_report/FinalReport.tex
+++ b/docs/final_report/FinalReport.tex
@@ -1,20 +1,23 @@
-\documentclass[a4paper,twoside,notitlepage]{article}
+\documentclass[a4paper,twoside,notitlepage]{report}
 
 \usepackage{parskip}
 \usepackage{hyperref}
-\usepackage[numbib]{tocbibind}
+\usepackage[nottoc,numbib]{tocbibind}
 \usepackage[fleqn]{amsmath}
 \usepackage{qtree}
 \usepackage{float}
 \usepackage{fancyvrb}
 \usepackage{comment}
 \usepackage{tabularx}
+\usepackage[color]{changebar}
+\usepackage{color}
 
 \floatstyle{boxed}
 \restylefloat{figure}
-\renewcommand{\bibsection}{\section{\bibname}}
 \newcommand{\ttt}{\texttt}
 \newcommand{\trm}{\textrm}
+\setcounter{tocdepth}{1}
+\cbcolor{red}
 
 \begin{document}
 
@@ -24,15 +27,15 @@
 \clearpage
 
 \tableofcontents
-\clearpage
 
-\section{Introduction} \label{sec:intro}
+\chapter{Introduction} \label{chp:intro}
 
 One of the aims of computer science is to make it easier for people to 
 generate \emph{computer programs}, which are the machine-readable 
 representations of desired behaviour executed by a computer in order to 
 perform some useful computation.
 
+\begin{changebar}
 In many cases the user might not have a clear idea of how a calculation is 
 to be performed, but will be able to point out some concrete examples of 
 its expected behaviour: the user intuitively knows that for certain 
@@ -45,6 +48,7 @@ program, it might be the best approximation that a user can produce with
 limited knowledge of the problem domain; and if the examples are 
 sufficiently comprehensive, it has been seen that it is often enough to 
 make a good guess at what program the user has in mind.
+\end{changebar}
 
 This project concerns the generation of \emph{imperative} computer 
 programs, consisting of sequences of instructions to be executed in order, 
@@ -55,7 +59,7 @@ In particular, we restrict our attention to a \emph{simple while language}
 containing the minimal features for computation involving whole numbers: 
 branching, using \emph{if statements}; looping, using \emph{while loops}, 
 and some basic arithmetic operators such as addition and multiplication.
-See Chapter~\ref{sec:whilan} for a formal description of this language.
+See Chapter~\ref{chp:whilan} for a formal description of this language.
 
 An example of such a program is the following, which takes as input an initial 
 value of \texttt{x}, say $x_0 \ge 0$, and leaves \texttt{y} equal to the 
@@ -93,10 +97,9 @@ that address this problem by allowing a program to be generated from a
 list of input/output examples it is desired to satisfy, or from a 
 mathematical or logical relation which is desired to hold over the whole 
 domain of input/output values.
-\clearpage
 
 There is a significant body of previous work in the automatic synthesis of 
-programs (see Chapter~\ref{sec:bkgsyn}). Most can be classified as 
+programs (see Chapter~\ref{chp:bkgsyn}). Most can be classified as 
 \emph{inductive}, which take a machine-learning approach to generalising a set 
 of input/output examples with a program in a particular language; or 
 \emph{deductive}\cite{cheatham86}\cite{bundy90}\cite{colon05}, which seek to 
@@ -110,35 +113,36 @@ solved, and with the application of new tools and techniques, we hope to break
 new ground and document their effectiveness.
 
 In particular, we use a type of logic programming called Answer Set 
-Programming (see Chapter~\ref{sec:bkgasp}), which was previously used for 
+Programming (see Chapter~\ref{chp:bkgasp}), which was previously used for 
 inductive synthesis of logic programs, as the main part of a system 
 capable of inductively synthesising imperative programs.
 
-\subsection{Contributions}
+\section{Contributions}
+\begin{changebar}
 \begin{itemize}
     \item We present a tool which, given a list of input/output examples 
     over a given variable domain will generate a program satisfying the
     examples, if one exists given the certain constraints. See 
-    Chapter~\ref{sec:synexm}.
+    Chapter~\ref{chp:synexm}.
+
+    \item We allow the structure of the generated program to be partially 
+    defined by the user, and show that this results in a significant increase
+    in speed of generation. See Chapter~\ref{chp:synexm}.
 
     \item We extend this system with the ability to judiciously generate 
     examples from a functional specification written in propositional
     logic, instead of relying on a list of examples from the user. See
-    Chapter~\ref{sec:genexm}.
-
-    \item We allow the structure of the generated program to be partially 
-    defined by the user, and show that this results in a significant increase
-    in speed of generation. See Chapter~\ref{sec:gensub}.
+    Chapter~\ref{chp:genexm}.
 
     \item Particularising the above to the generation of programs 
     involving loops, we allow a \emph{loop invariant} and \emph{variant}
     to be specified by the user, and use this to generate the loop body
     separately from the rest of the program, also resulting in an 
-    increase in speed of generation. See Chapter~\ref{sec:gensub}.
+    increase in speed of generation. See Chapter~\ref{chp:gensub}.
 \end{itemize}
-\clearpage
+\end{changebar}
 
-\section{Background: Automatic Program Synthesis} \label{sec:bkgsyn}
+\chapter{Background: Automatic Program Synthesis} \label{chp:bkgsyn}
 
 The notion of automatic programming, in the sense of 
 allowing a computer to take part in the writing of a computer program, has its 
@@ -150,7 +154,7 @@ between specification language and output language. More detailed surveys of
 the subject can be found at e.g.\ 
 \cite{goldberg86}\cite{deville94}\cite{basin04}.
 
-\subsection{Deductive Program Synthesis}
+\section{Deductive Program Synthesis}
 
 In the \emph{deductive} variety of program synthesis, in which the task is to 
 derive a correct program from a formal specification, there are several 
@@ -182,7 +186,7 @@ outputs with logical formulae, and given also the looping structure of the the
 program, it is possible to infer a program satisfying these constraints, using 
 techniques previously used for program verification.
 
-\subsection{Inductive Program Synthesis}
+\section{Inductive Program Synthesis}
 
 On the other hand, in \emph{inductive} program synthesis, the task is to 
 produce a hypothetical program, given an incomplete specification of its 
@@ -199,11 +203,11 @@ sets of input/output examples. Notably, their system is not limited to
 imperative programs, but allows arbitrary domain-specific languages to be 
 defined and used with the system.
 
-\section{Background: Answer Set Programming} \label{sec:bkgasp}
+\chapter{Background: Answer Set Programming} \label{chp:bkgasp}
 
-\section{Programs in the While Language} \label{sec:whilan}
+\chapter{Programs in the While Language} \label{chp:whilan}
 
-\subsection{Language Definiton}
+\section{Syntax and Semantics}
 
 The output language of our system is an imperative programming language that 
 can be described as a ``simple while language''. A running program's state is 
@@ -212,7 +216,7 @@ controlled by \emph{if} and \emph{while} statements. This language is
 therefore Turing complete, its expressive power in principle no less than any 
 other programming language.
 
-\subsubsection{Syntax}
+\subsection{Syntax}
 The following context-free grammar gives the (abstract) syntax of the While 
 language. The basic elements of a program are integer constants and named 
 variables. The exact set of possible constants and variables is specific to 
@@ -222,7 +226,7 @@ Section~\ref{sec:spclng}).
    \trm{Const} \to\ & ... \mid -2 \mid -1 \mid 0 \mid 1 \mid 2 \mid ...
 \\ \trm{Var}   \to\ & a \mid b \mid c \mid ... \mid x \mid y \mid z \mid ...
 \end{align*}
-A While program is a possible empty sequence of \emph{commands}, where a 
+A While program is a possibly empty sequence of \emph{commands}, where a 
 \emph{command} assigns a value to a variable, or takes the form of an \ttt{if} 
 or \ttt{while} statement with a boolean guard and a further sequence of 
 commands:
@@ -248,9 +252,9 @@ Input and output is achieved by setting the initial values of certain
 \emph{input variables} before the program runs, and reading the values of 
 certain \emph{output variables} after it has terminated.
 
-\subsubsection{Example Program}
+\subsection{Example Program}
 
-Recall the example program from Section~\ref{sec:intro}:
+Recall the example program from Chapter~\ref{chp:intro}:
 \begin{Verbatim}[samepage=true]
     y = 1;
     while (x > 0) {
@@ -283,7 +287,7 @@ omitted when unambiguous) is given in Figure~\ref{fig:parsetree}.
   ]]
 \end{figure}
 
-\subsubsection{Semantics}
+\subsection{Semantics}
 The semantics of While programs are the same as C programs with the same 
 syntax, except:
 \begin{enumerate}
@@ -307,15 +311,15 @@ solutions.
     cause the program to formally fail to terminate.
 \end{enumerate}
 
-\subsection{Program Encoding in ASP} \label{sec:progenc}
+\section{Program Encoding in ASP} \label{sec:progenc}
 
 Programs are represented as sequences of numbered \emph{lines}, where each 
 line contains an \emph{instruction}. The fact that the instruction 
 \verb|Instr| occurs on line \verb|L|, where \verb|L| ranges from 1 to some 
 maximum line number, is represented by:
-\begin{verbatim}
+\begin{Verbatim}[samepage=true]
     line_instr(L, Instr).
-\end{verbatim}
+\end{Verbatim}
 
 The instruction \verb|Instr| may be any of the following terms:
 
@@ -359,18 +363,18 @@ and \verb|Expr2| are expressions:
 \\  \verb|   le(Expr1, Expr2)| & less than or equal: & \verb|Expr1 <= Expr2|
 \end{tabular}
 
-Below is an example of the program from Section~\ref{sec:intro}, which 
+Below is an example of the program from Chapter~\ref{chp:intro}, which 
 computes powers of two, represented in this encoding, with comments on 
 the right giving the represented instruction in the familiar form:
-\begin{verbatim}
+\begin{Verbatim}[samepage=true]
     line_instr(1, set(y, con(1))).                % y = 1;
     line_instr(2, while(lt(con(0), var(x)), 2)).  % while (0 < x) {
     line_instr(3, set(y, mul(var(y), con(2))).    %     y = y * 2;
     line_instr(4, set(x, sub(var(x), con(1))).    %     x = x - 1;
     line_instr(5, end_while).                     % }
-\end{verbatim}
+\end{Verbatim}
 
-\subsection{Implementation}
+\section{Running Programs in ASP} \label{sec:runasp}
 
 We have implemented in ASP an interpreter for the While language, 
 \verb|run.lp|, which when combined with a set of facts giving a program 
@@ -381,24 +385,19 @@ of variables after running the program. The constants \verb|time_max|,
 effect suitable execution limits and to allow the program's grounding to 
 be finite.
 
-Note that although these parameters are related to the ones given in 
-Section~\ref{sec:spclng}, Task Specification Language, they are not given 
-in the same form here, for reasons of efficiency. The Specification 
-Language will be used by higher-level components of the system.
-
 \verb|run.lp| allows multiple execution traces to be computed at once, 
 using the predicate \verb|in/3|, which takes the following form:
-\begin{verbatim}
+\begin{Verbatim}[samepage=true]
     in(RunID, Variable, InitialValue).
-\end{verbatim}
+\end{Verbatim}
 For each execution trace a unique \verb|RunID| is assigned, and one or 
 more instances of \verb|in/3| are defined, one for each input variable.
 
 The answer set contains facts of the following form:
-\begin{verbatim}
+\begin{Verbatim}[samepage=true]
     run_var_out(RunID, Variable, FinalValue)
     run_does_not_halt(RunID)
-\end{verbatim}
+\end{Verbatim}
 The former signifies that \verb|RunID| terminated successfully with the 
 given final values for each variable; and the latter signifies that the 
 run did not successfully terminate, which could be because the number of 
@@ -410,33 +409,51 @@ by zero.
 
 As an example, when we run \verb|run.lp| with the constants 
 \verb|time_max=99|, \verb|int_min=0|, \verb|int_max=32|, with the facts 
-from the example at the end of the previous 
-section \ref{sec:progenc}, and with the following additional facts:
-\begin{verbatim}
+from the example at the end of the previous section \ref{sec:progenc},
+and with the following additional facts:
+\begin{Verbatim}[samepage=true]
     in(run0,x,0).
     in(run1,x,1).
     in(run2,x,2).
     in(run3,x,3).
     in(run4,x,4).
     in(run5,x,5).
-\end{verbatim}
+\end{Verbatim}
 Then the resulting answer set computed by Clingo 3 contains the following 
 instances of \verb|run_var_out/3|:
-\begin{verbatim}
+\begin{Verbatim}[samepage=true]
     run_var_out(run0,x,0)  run_var_out(run0,y,1)
     run_var_out(run1,x,0)  run_var_out(run1,y,2)
     run_var_out(run2,x,0)  run_var_out(run2,y,4)
     run_var_out(run3,x,0)  run_var_out(run3,y,8)
     run_var_out(run4,x,0)  run_var_out(run4,y,16) 
     run_var_out(run5,x,0)  run_var_out(run5,y,32)
-\end{verbatim}
+\end{Verbatim}
 Which as we would expect gives the correct result, with $y = 2^{x_0}$, 
 where $y$ is the final value of \verb|y| and $x_0$ is the initial value of 
 \verb|x|.
 
-\section{Synthesis of Programs from User Examples} \label{sec:synexm}
-\subsection{Task Specification Language} \label{sec:spclng}
+\chapter{Synthesis of Programs from User Examples} \label{chp:synexm}
 
+\begin{changebar}
+This chapter will detail the part of our system which takes a list of user 
+examples as input, and gives a program satisfying those examples as 
+output. It consists of two components:
+\begin{itemize}
+    \item An Answer Set Program, \verb|learn.asp|, which contains a 
+    modified version of \verb|run.asp| from Section~\ref{sec:runasp}, in 
+    addition to aggregrates and integrity constraints which invert the 
+    computation done by \verb|run.asp| so that it takes program results as 
+    \emph{input}, and produces the program as \emph{output}.
+
+    \item A Haskell program which reads a \emph{task specification} and 
+    sets up parameters to \verb|learn.asp|, running it multiple times if 
+    necessary with different parameters to find a program meeting the task 
+    specification, and prints it in a human-readable form.
+\end{itemize}
+\end{changebar}
+
+\section{Task Specification Language} \label{sec:spclng}
 The user specifies a program synthesis task by writing a configuration file 
 containing the relevant parameters. The format chosen for this file is an 
 Answer Set Program whose answer set contains facts giving the parameters. 
@@ -446,36 +463,56 @@ chosen for ease of integration with the other tools used.
 
 The following categories of parameters may be given:
 
-\subsubsection{Program Template}
+\subsection{Input/Output Examples}
 
-\textbf{More parameters to be added to this section, after their syntax is 
-finalised.}
+\begin{Verbatim}[samepage=true]
+input_variable(V1; ...; Vn).
+\end{Verbatim}
+The \ttt{n} variables $\{\ttt{V1}, ..., \ttt{Vm}\}$ are declared as input 
+variables, meaning that they are initialised with values to parameterise an 
+individual execution of the program.
 
-\subsubsection{Language Bias}
+\begin{Verbatim}[samepage=true]
+output_variable(V1; ...; Vn).
+\end{Verbatim}
+The \ttt{n} variables $\{\ttt{V1}, ..., \ttt{Vm}\}$ are declared as output
+variables, meaning that their values when the program terminates are recorded
+and possibly compared with the input values to determine correctness.
 
-\begin{verbatim}
+\begin{Verbatim}[samepage=true]
+ in(ExampleID, InputVariable,  InitialValue).
+out(ExampleID, OutputVariable, ExpectedFinalValue).
+\end{Verbatim}
+These parameters allow the user to list input/output examples that the program 
+is required to satisfy. Any number of examples may be given, and each set of 
+examples should have a unique \ttt{ExampleID}, with which each 
+\ttt{InputVariable} and \ttt{OutputVariable} is associated with an 
+\ttt{InitialValue} or \ttt{ExpectedFinalValue}.
+
+\subsection{Language Bias}
+\begin{Verbatim}[samepage=true]
 constant(C1; ...; Cn).           % Optional; default: no constants.
-\end{verbatim}
+\end{Verbatim}
 The \ttt{n} numerical constants $\{\ttt{C1}, ..., \ttt{Cn}\}$ 
 given here may occur as literals in the program. No other constants may occur.
 
-\begin{verbatim}
+\begin{Verbatim}[samepage=true]
 extra_variable(V1; ...; Vn).     % Optional; default: no extra variables.
-\end{verbatim}
+\end{Verbatim}
 The \texttt{n} variables $\{\ttt{V1}, ..., \ttt{Vn}\}$ given here 
 may occur in the program in addition to those given by \ttt{input\_variable\/1}
 and \ttt{output\_variable\/1}. No other variables may occur.
 
-\begin{verbatim}
+\begin{Verbatim}[samepage=true]
 read_only_variable(V1; ...; Vn). % Optional; default: all variables writable.
-\end{verbatim}
+\end{Verbatim}
 None of the \texttt{n} variables $\{\ttt{V1}, ..., \ttt{Vn}\}$ 
 given here may be modified by the program. Of course, this only makes sense 
 for input variables, as a read-only variable could only otherwise hold a value 
 by receiving an input value. This can be used to speed up the search for a 
 program by eliminating spurious variable assignments.
 
-\begin{verbatim}
+\begin{Verbatim}[samepage=true]
 disallow_feature(if).           % No if statements.
 disallow_feature(while).        % No while loops.
 
@@ -485,45 +522,62 @@ disallow_feature(mul).          % No multiplication.
 disallow_feature(div).          % No integer division.
 disallow_feature(mod).          % No remainder.
 disallow_feature(arithmetic).   % None of the above operations.
-\end{verbatim}
+\end{Verbatim}
 The given syntactic element is prevented from occurring in a generated 
 program, unless it occurs in user-specified code in the program template.
 
-\subsubsection{Execution Limits}
-\begin{verbatim}
+\subsection{Program Template}
+\begin{Verbatim}[samepage=true]
+preset_line_instr(Line, Instr).
+preset_line_instr(line_max-N, Instr).
+\end{Verbatim}
+In the first form, an instruction at a certain line number is fixed, using 
+the same format as \verb|line_instr| from Section~\ref{sec:runasp}. In the 
+second form, the special constant \verb|line_max|, which is instantiated 
+to the number of lines in the program the synthesiser is currently trying 
+to generate, is used to specify an instruction \verb|N| lines from the 
+end of the program.
+
+\subsection{Execution Limits}
+\begin{Verbatim}[samepage=true]
 int_range(Imin, Imax).  % Required.
-\end{verbatim}
+\end{Verbatim}
 The value of no variable may be less than \ttt{Imax} or greater than 
 \ttt{Imin}.
 
-\begin{verbatim}
+\begin{Verbatim}[samepage=true]
 time_limit(Tmax).       % Required.
-\end{verbatim}
+\end{Verbatim}
 No more than \ttt{Tmax} instructions may be executed in any single execution.
 
-\subsubsection{Search Hints}
-\begin{verbatim}
+\subsection{Search Hints}
+\begin{Verbatim}[samepage=true]
 line_limit_min(Lmin).   % Optional; default: 0.
 line_limit_max(Lmax).   % Optional; default: unbounded.
 line_limit_step(Lstep). % Optional; default: 1.
-\end{verbatim}
-Controls the incremental search for a program with increasing limits on the 
-number of lines. Initially, a program with at most \ttt{Lmin} lines is sought 
-(which by default is the empty program). If no such program can be found, the 
-limit is increased by \ttt{Lstep} and the search repeated, until the limit 
-exceeds \ttt{Lmax}.
+\end{Verbatim}
+Controls the incremental search for a program with increasing limits on 
+the number of lines. Initially, a program with \ttt{Lmin} lines is sought 
+(for the default, \verb|Lmin=0|, this is the empty program). If no such 
+program can be found, the limit is increased by \ttt{Lstep} and the search 
+repeated, until the limit exceeds \ttt{Lmax}.
 
-\subsubsection{Example Specifications}
+\section{Implementation}
 
-There are two ways to specify the behaviour of the program we want to 
-synthesise: by listing examples, or by giving a precondition and a 
-postcondition. We shall gives examples of both of these for the case of a 
-program that computes a given power of two.
+\section{Examples}
+Below is an example of how we might use this language to specify a program 
+which takes an input $x_0$, and produces an output with $y = 2^{x_0}$, by 
+listing a number of input/output examples. We make a guess at the 
+execution resources and the language elements needed by the resulting 
+program.
 
-Using examples:
-\begin{verbatim}
-    int_range(0, 32). time_limit(10). constant(1; 2).
-    input_variable(x). output_variable(y).
+\begin{Verbatim}[samepage=true]
+    int_range(0, 32).
+    time_limit(10).
+    constant(1; 2).
+
+    input_variable(x).
+    output_variable(y).
 
     in(ex0, x, 0). out(ex0, y, 1).
     in(ex1, x, 1). out(ex1, y, 2).
@@ -531,59 +585,20 @@ Using examples:
     in(ex3, x, 3). out(ex3, y, 8).
     in(ex4, x, 4). out(ex4, y, 16).
     in(ex5, x, 5). out(ex5, y, 32).
-\end{verbatim}
+\end{Verbatim}
 
-Using a precondition and postcondition:
-\begin{verbatim}
-    int_range(0, 32). time_limit(10). constant(1; 2).    
-    input_variable(x). output_variable(y).
+\chapter{Automatic Generation of Examples} \label{chp:genexm}
 
-    precondition("In_x >= 0").
-    postcondition("Out_y == 2 ** In_x").
-\end{verbatim}
-
-We would expect both of these specifications to produce programs with 
-equivalent behaviour, even if the programs differ in superficial aspects. 
-However, it will be seen that the latter specification leads to a more 
-efficient process of synthesis due to the fact that fewer more well-chosen 
-examples are needed to produce the correct program.
-
-\clearpage 
-
-\section{Automatic Generation of Examples} \label{sec:genexm}
-
-\subsection{Extensions to the Task Specification Language}
-The specification language from Chapter~\ref{sec:synexm} is extended with 
+\section{Extensions to the Task Specification Language}
+The specification language from Chapter~\ref{chp:synexm} is extended with 
 the following configuration entries:
 
-\begin{verbatim}
-input_variable(V1; ...; Vn).
-\end{verbatim}
-The \ttt{n} variables $\{\ttt{V1}, ..., \ttt{Vm}\}$ are declared as input 
-variables, meaning that they are initialised with values to parameterise an 
-individual execution of the program.
+\subsection{Functional Specification}
 
-\begin{verbatim}
-output_variable(V1; ...; Vn).
-\end{verbatim}
-The \ttt{n} variables $\{\ttt{V1}, ..., \ttt{Vm}\}$ are declared as output
-variables, meaning that their values when the program terminates are recorded
-and possibly compared with the input values to determine correctness.
-
-\begin{verbatim}
- in(ExampleID, InputVariable,  InitialValue).
-out(ExampleID, OutputVariable, ExpectedFinalValue).
-\end{verbatim}
-These parameters allow the user to list input/output examples that the program 
-is required to satisfy. Any number of examples may be given, and each set of 
-examples should have a unique \ttt{ExampleID}, with which each 
-\ttt{InputVariable} and \ttt{OutputVariable} is associated with an 
-\ttt{InitialValue} or \ttt{ExpectedFinalValue}.
-
-\begin{verbatim}
+\begin{Verbatim}[samepage=true]
 precondition(PreconditionString).   % Optional; default: true.
 postcondition(PostconditionString). % Optional; default: true.
-\end{verbatim}
+\end{Verbatim}
 If a precondition and/or postcondition are given, the task is to synthesise a 
 program whose output values satisfy the postcondition whenever its input 
 values satisfy the precondition, in addition to any constraints given by 
@@ -598,27 +613,47 @@ the same ASP variables, in addition to those corresponding to the final values
 of output variables, which take the form \ttt{Out\_y} for an output variable 
 named \ttt{y}.
 
-\section{Separate Synthesis of Subprograms} \label{sec:gensub}
+\section{Implementation}
 
-\subsection{Extensions to the Task Specification Language}
+\section{Examples}
 
-\subsection{Separate Synthesis of Loop Bodies}
+In Chapter~\ref{chp:synexm} we gave an example of how we would specify 
+using a list of the examples the $y = 2^{x_0}$ program. We now show how, 
+using the extensions to specification language, this can be done with no 
+explicitly listed examples:
 
-\section{Evaluation}
-\subsection{Power and Accuracy}
-\subsubsection{Extent of Capabilities}
-\subsubsection{Correctness of Generated Programs}
-\subsection{Efficiency}
-\subsubsection{Time and Space Usage}
-\subsubsection{Number of Examples Needed}
-\subsubsection{Quality of Generated Programs}
-\subsection{Comparison with Existing Systems}
+\begin{Verbatim}[samepage=true]
+    int_range(0, 32).
+    time_limit(10).
+    constant(1; 2).    
 
-\section{Conclusions and Future Work}
-\subsection{Conclusion}
-\subsection{Possible Extensions}
+    input_variable(x).
+    output_variable(y).
 
-\clearpage
+    precondition("In_x >= 0").
+    postcondition("Out_y == 2 ** In_x").
+\end{Verbatim}
+
+\chapter{Separate Synthesis of Subprograms} \label{chp:gensub}
+
+\section{Extensions to the Task Specification Language}
+
+\section{Separate Synthesis of Loop Bodies}
+
+\chapter{Evaluation}
+\section{Power and Accuracy}
+\subsection{Extent of Capabilities}
+\subsection{Correctness of Generated Programs}
+\section{Efficiency}
+\subsection{Time and Space Usage}
+\subsection{Number of Examples Needed}
+\subsection{Quality of Generated Programs}
+\section{Comparison with Existing Systems}
+
+\chapter{Conclusions and Future Work}
+\section{Conclusion}
+\section{Possible Extensions}
+
 \begin{thebibliography}{9}
     \bibitem{fortran}
         Padua, D. (2000). The Fortran I Compiler.
